--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>App 2</title>
 
 <link rel="stylesheet" href="/estilos_menu.css">
-<link rel="stylesheet" href="/footer.css">
+<link rel="stylesheet" href="footer.css">
 <script src="http://code.jquery.com/jquery-latest.js"></script>
-<script src="/main.js"></script>
+<script src="main.js"></script>
 </head>
 
 <body>
@@ -49,7 +49,7 @@
     <table class="tabla-1">
       <tr>
         <td class="td-1">
-          <img src="/Caratula/curita_menu.gif"></img>
+          <img src="curita_menu.gif"></img>
         </td>
         <td>
           <h4 class="izq">Un servicio de curas...</h4>
