--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <table class="tabla-1">
       <tr>
         <td class="td-1">
-          <img src="curita_menu.gif"></img>
+          <img src="Caratula/curita_menu.gif"></img>
         </td>
         <td>
           <h4 class="izq">Un servicio de curas...</h4>
