--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/menu_alm_cal.htm">Calendario Litúrgico</a></li>
+        <li><a href="http://www.curas.com.ar/menu_alm_cal.htm">Calendario Litúrgico</a></li>
         <li><a href="/Rituales/Sacramentos_r.htm">Libros Litúrgicos</a></li>
         <li><a href="/Musica/HS_r.htm">Música Litúrgica</a></li>
         <li><a href="/Documentos/Docs_r.htm">Documentos</a></li>
