--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- para que el navegador no busque en cache-->
+  <meta http-equiv="Expires" content="0">
+  <meta http-equiv="Last-Modified" content="0">
+  <meta http-equiv="Cache-Control" content="no-cache, mustrevalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  
   <title>App 2</title>
 
 <link rel="stylesheet" href="/estilos_menu.css">
@@ -22,13 +28,13 @@
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="http://www.curas.com.ar/menu_alm_cal.htm">Calendario Litúrgico</a></li>
-        <li><a href="/Rituales/Sacramentos_r.htm">Libros Litúrgicos</a></li>
-        <li><a href="/Musica/HS_r.htm">Música Litúrgica</a></li>
-        <li><a href="/Documentos/Docs_r.htm">Documentos</a></li>
-        <li><a href="/Documentos/Temas2_r.htm">Temas</a></li>
-        <li><a href="/Moviles/Intermovil2_r.htm">Móviles</a></li>
-        <li><a href="/Vacaciones/Vacaciones_r.htm">Vacaciones</a></li>
-        <li><a href="/Documentos/Links_r.htm">Vínculos</a></li>
+        <li><a href="http://www.curas.com.ar/Rituales/Sacramentos_r.htm">Libros Litúrgicos</a></li>
+        <li><a href="http://www.curas.com.ar/Musica/HS_r.htm">Música Litúrgica</a></li>
+        <li><a href="http://www.curas.com.ar/Documentos/Docs_r.htm">Documentos</a></li>
+        <li><a href="http://www.curas.com.ar/Documentos/Temas2_r.htm">Temas</a></li>
+        <li><a href="http://www.curas.com.ar/Moviles/Intermovil2_r.htm">Móviles</a></li>
+        <li><a href="http://www.curas.com.ar/Vacaciones/Vacaciones_r.htm">Vacaciones</a></li>
+        <li><a href="http://www.curas.com.ar/Documentos/Links_r.htm">Vínculos</a></li>
         <li><a href="mailto:info@curas.com.ar">Contacto</a></li>
       </ul>
     </nav>
