--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <link rel="stylesheet" href="/estilos_menu.css">
 <link rel="stylesheet" href="footer.css">
-<script src="http://code.jquery.com/jquery-latest.js"></script>
+<script src="jquery-latest.js"></script>
 <script src="main.js"></script>
 </head>
 
